Change base URL to full path GHPages subdomain incl background pic

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <style>
 #site-head.withCenteredImage {
-  background-image: url('/images/csun-sfv-ca-map.png');  
+  background-image: url('https://ahlayer8tech.github.io/YGO-SFV-Static/images/csun-sfv-ca-map.png');  
 }
 @media (max-width:1280px) {
   #site-head.withCenteredImage { background-image: url('/images/csun-sfv-ca-map_huf7813bed0155d9e3f2850f57607fb1ed_430921_1280x0_resize_q100_h2_lanczos_3.webp'); }
