Update correct pathname for favicon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>YGO SFV</title>
 
 
-  <link rel="shortcut icon" href="/images/yugioh.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="https://ahlayer8tech.github.io/YGO-SFV-Static/images/yugioh.ico" type="image/x-icon" />
 
 
   <meta name="description" content="Nutrition Coach &amp; Chef Consultant"
